<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light" >

    <TextView
        android:id="@+id/textViewPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPhoneNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textViewKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextkey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/messageViewKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_label"
        android:textSize="20sp" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:weightSum="10">
    	
        <EditText
        android:id="@+id/editTextSMS"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />
        
        <Button
        android:id="@+id/btnSendSMS"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:text="@string/send_sms_label" />
        
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/encryptedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypted"
        android:textSize="20sp" />
    
    <TextView 
        android:id="@+id/encryptedText"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        />
    
     <Button
        android:id="@+id/btnReadSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_sms_label" />

</LinearLayout>